 b=417246, wrong border size rendering in some cases ; r=roc